{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 9,
  "lineage": "e456df5c-271c-8a72-73b9-36a9a1315aa2",
  "resources": [
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    }
  ]
}